--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,10 +16,33 @@ p, a{
 /* Banner Section Start   */
 .banner{
     width: 100%;
-    height: 500px;
+    height: auto;
     background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(../img/img1.jpg);
     background-size: cover;
     background-position: center center;
+}
+.banner .form-bg{
+    width: 100%;
+    height: auto;
+    background: #DC3545;
+}
+.banner .form-bg ul{
+    display: flex;
+}
+.banner .form-bg ul li a{
+    list-style: none;
+    text-decoration: none;
+    color: #fff;
+    background: #2a2121;
+    padding: 5px;
+    margin-right: 10px;
+}
+.banner .form-bg button{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: none;
+   
 }
 /* /Banner Section End   */
 
@@ -120,3 +143,24 @@ footer .social-icon li a{
     color: #2a2121;
 }
 /* /Footer Section End  */
+
+/* Media Query Start */
+@media (max-width: 576px) { 
+    .fun .col-lg-2{
+        margin-left: 40px;
+    }
+    .subscribe{
+        text-align: center;
+    }
+    .subscribe .col-lg-6{
+        margin-bottom: 15px;
+    }
+    .popular .card{
+        margin-left: 70px;
+        margin-bottom: 20px;
+    }
+    footer{
+        text-align: center;
+    }
+ }
+/* /Media Query End */
