--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,8 @@
     box-sizing: border-box;
 }
 h1, h2, h3, h4, h5, h6{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 500;
 }
 p, a{
     font-family: 'Times New Roman', Times, serif;
@@ -17,7 +18,7 @@ p, a{
 .banner{
     width: 100%;
     height: auto;
-    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(../img/img1.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../img/ready-summer.jpg);
     background-size: cover;
     background-position: center center;
 }
@@ -30,19 +31,15 @@ p, a{
 .banner .form-bg{
     width: 100%;
     height: auto;
-    background: #DC3545;
 }
 .banner .form-bg ul{
     display: flex;
 }
-.banner .form-bg input{
-    width: 100%;
-}
 .banner .form-bg ul li a{
     list-style: none;
     text-decoration: none;
-    color: #fff;
-    background: #564848;
+    color: #000000;
+    background: #ccc;
     padding: 5px;
     margin-right: 10px;
 }
@@ -52,11 +49,7 @@ p, a{
     color: #fff;
 }
 .banner .form-bg button{
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    border: none;
-    background: #fff;
+    margin-top: 20px;
 }
 /* /Banner Section End   */
 
@@ -64,15 +57,13 @@ p, a{
 .fun{
     width: 100%;
     height: auto;
-    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(../img/img6.jpg);
-    background-position: center center;
-    background-size: cover;
     color: #fff;
+    background: #6C757D;
 }
 .fun .box{
     width: 150px;
     height: 120px;
-    background: #DC3545;
+    background: #709094;
     margin: 15px;
     border-radius: 20px;
 }
@@ -82,7 +73,7 @@ p, a{
 .subscribe{
     width: 100%;
     height: auto;
-    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(../img/img7.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(../img/ready-summer.jpg);
     background-size: cover;
     background-position: center center;
 }
@@ -95,7 +86,9 @@ p, a{
 .popular{
     width: 100%;
     height: auto;
-    background: #DC3545;
+    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(../img/ready-summer.jpg);
+    background-size: cover;
+    background-position: center center;
 }
 
 /* /Popular Section End  */
@@ -104,7 +97,7 @@ p, a{
 .estimate{
     width: 100%;
     height: auto;
-    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../img/img1.jpg);
+    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../img/ready-summer.jpg);
     background-size: cover;
     background-position: center center;
 }
@@ -114,6 +107,9 @@ p, a{
 .latest .img-fluid{
     width: 100%;
     height: 170px;
+    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../img/ready-summer.jpg);
+    background-size: cover;
+    background-position: center center;
 }
 /* /Latest Section End  */
 
@@ -121,7 +117,7 @@ p, a{
 footer{
     width: 100%;
     height: auto;
-    background-image: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)),url(../img/fun.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)),url(../img/ready-summer.jpg);
     background-size: cover;
     background-position: center center;
 }
@@ -132,7 +128,7 @@ footer ul li a{
     font-size: 15px;
 }
 footer ul li span{
-    color: #FFC107;
+    color: #fff;
 }
 footer ul li img{
     padding-right: 5px;
@@ -159,6 +155,31 @@ footer .social-icon li a{
 /* /Footer Section End  */
 
 /* Media Query Start */
+@media (min-width: 768px){
+    .banner .col-lg-3, .col-lg-2{
+        margin-bottom: 10px;
+    }
+    .banner .form-bg .btn{
+        width: 100%;
+        height: 40px;
+        border-radius: 0px;
+    }
+    .subscribe .col-lg-6{
+        margin-bottom: 15px;
+    }
+    .popular .card{
+        margin-bottom: 20px;
+    }
+    .estimate .col-lg-3{
+        margin-bottom: 10px;
+    }
+    .estimate .btn{
+        width: 100%;
+    }
+    footer{
+        text-align: center;
+    }
+  }
 @media (max-width: 576px) { 
     .banner h1{
         font-size: 30px;
@@ -188,7 +209,6 @@ footer .social-icon li a{
     }
     .popular .card{
         margin-bottom: 20px;
-        margin-left: 100px;
     }
     .estimate .col-lg-3, .col-lg-2{
         margin-bottom: 10px;
@@ -224,9 +244,6 @@ footer .social-icon li a{
     .fun .box{
         margin-left: 80px;
     }
-    .popular .card{
-        margin-left: 20px;
-    }
     .estimate .col-lg-3{
         margin-bottom: 10px;
     }
@@ -234,4 +251,10 @@ footer .social-icon li a{
         width: 100%;
     }
   }
+  @media (max-width: 375px){
+    .popular .card{
+        margin-left: 27px;
+    }
+  }
+  
 /* /Media Query End */
